# kulak

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  kulak.sln  kulak.vcxproj  kulak.vcxproj.filters
src/: animation.cpp  animation.hpp  background.cpp  background.hpp  cvar.cpp  cvar.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  log.cpp  log.hpp  main.cpp  player_stats.cpp  player_stats.hpp  resource.cpp  resource.hpp  world.cpp  world.hpp
src/components/: cAnimation.hpp  cEnemy.hpp  cPlayer.hpp  cRender.hpp  cSound.hpp  cWeapon.hpp  events.hpp
src/resource/: red.txt  spawns.kk
src/systems/: animation_system.cpp  animation_system.hpp  camera.cpp  camera.hpp  enemy_ai.cpp  enemy_ai.hpp  enemy_spawn.cpp  enemy_spawn.hpp  enemy_weapons.cpp  enemy_weapons.hpp  hud_system.cpp  hud_system.hpp  input.cpp  input.hpp  level_system.cpp  level_system.hpp  menu.cpp  menu.hpp  player_movement.cpp  player_movement.hpp  player_resources.cpp  player_resources.hpp  player_weapons.cpp  player_weapons.hpp  sound_system.cpp  sound_system.hpp  state.cpp  state.hpp  weapons.cpp  weapons.hpp
